1、状态栏目颜色修改

--- a/BallMachine/Info.plist
+++ b/BallMachine/Info.plist
@@ -13,5 +13,7 @@
 		<string>bluetooth-peripheral</string>
 		<string>fetch</string>
 	</array>
+	<key>UIViewControllerBasedStatusBarAppearance</key>
+	<false/>
 </dict>
 </plist>
